feat(aop): introduce aop
Implement aspectj aop as a workaround for transactions within a virtual thread

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.highlight_sql=true
+spring.aop.proxy-target-class=false
+logging.level.org.springframework.beans.factory.wiring.BeanConfigurerSupport=DEBUG
 spring.modulith.events.jdbc.schema-initialization.enabled=true
