feat(migratio): Flyway migration
Add support for flyway migration and minio object store

--- a/compose.yaml
+++ b/compose.yaml
@@ -9,3 +9,18 @@ services:
       POSTGRES_PASSWORD: simple_commerce
     ports:
       - "5432"
+  objectStore:
+    image: quay.io/minio/minio:RELEASE.2024-08-03T04-33-23Z-cpuv1
+    command: ["server", "--console-address", ":9001"]
+    environment:
+      MINIO_CONFIG_ENV_FILE: /etc/config.env
+    volumes:
+      - objectStoreData:/mnt/data
+      - ./minio/config:/etc/config.env
+    ports:
+      - "9001:9001"
+      - "9000:9000"
+
+volumes:
+  objectStoreData:
+    driver: local
