--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,20 @@
+minio.endpoint=http://localhost:9000
+minio.access-key=simple_commerce
+minio.secret-key=simple_commerce
+objectstore.options.bucket-name=simple-commerce
+objectstore.options.presigned-url-expiry-duration=2h
+objectstore.options.default-bucket=true
+spring.aop.proxy-target-class=false
 spring.application.name=simple-commerce
-spring.threads.virtual.enabled=true
+spring.flyway.locations=classpath:db/migration/{vendor}
 spring.graphql.graphiql.enabled=true
 spring.jpa.open-in-view=false
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.highlight_sql=true
-spring.aop.proxy-target-class=false
-logging.level.org.springframework.beans.factory.wiring.BeanConfigurerSupport=DEBUG
+spring.threads.virtual.enabled=true
 spring.modulith.events.jdbc.schema-initialization.enabled=true
+logging.level.org.springframework.beans.factory.wiring.BeanConfigurerSupport=DEBUG
+logging.level.com.simplecommerce.shared.config.MinioConfiguration=DEBUG
