--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,20 @@
 minio.endpoint=http://localhost:9000
 minio.access-key=simple_commerce
 minio.secret-key=simple_commerce
+objectstore.options.anonymous-bucket-policy=classpath:policies/anonymous-bucket-policy.json
 objectstore.options.bucket-name=simple-commerce
+objectstore.options.media-bucket-prefix=media
 objectstore.options.presigned-url-expiry-duration=2h
 objectstore.options.default-bucket=true
 spring.aop.proxy-target-class=false
 spring.application.name=simple-commerce
-spring.flyway.locations=classpath:db/migration/{vendor}
+spring.flyway.clean-disabled=true
+spring.flyway.clean-on-validation-error=false
+spring.flyway.locations=classpath:db/migration/{vendor}, classpath:db/data/{vendor}
 spring.graphql.graphiql.enabled=true
 spring.jpa.open-in-view=false
 spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.highlight_sql=true
