--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,7 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.highlight_sql=true
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://127.0.0.1:5556/dex
 spring.threads.virtual.enabled=true
 spring.modulith.events.jdbc.schema-initialization.enabled=true
 logging.level.org.springframework.beans.factory.wiring.BeanConfigurerSupport=DEBUG
