feat(relay): add relay support
Relay support added along with Spring Data integration for Subrange and Sort

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ spring.threads.virtual.enabled=true
 spring.modulith.events.jdbc.schema-initialization.enabled=true
 logging.level.org.springframework.beans.factory.wiring.BeanConfigurerSupport=DEBUG
 logging.level.com.simplecommerce.shared.config.MinioConfiguration=DEBUG
+logging.level.com.simplecommerce.shared.config.Sorting=DEBUG
+logging.level.com.simplecommerce.product.ProductController=DEBUG
