feat(user): add user
add user entity and propagated spring security contexts through multiple threads

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+hibernate.validator.constraint_expression_language_feature_level=bean-methods
 minio.endpoint=http://localhost:9000
 minio.access-key=simple_commerce
 minio.secret-key=simple_commerce
@@ -19,9 +20,22 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.highlight_sql=true
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://127.0.0.1:5556/dex
+spring.security.oauth2.resourceserver.jwt.principal-claim-name=name
 spring.threads.virtual.enabled=true
 spring.modulith.events.jdbc.schema-initialization.enabled=true
+
+################################
+# Logging
+################################
 logging.level.org.springframework.beans.factory.wiring.BeanConfigurerSupport=DEBUG
 logging.level.com.simplecommerce.shared.config.MinioConfiguration=DEBUG
 logging.level.com.simplecommerce.shared.config.Sorting=DEBUG
 logging.level.com.simplecommerce.product.ProductController=DEBUG
+logging.level.org.springframework.data.auditing.AuditingHandler=DEBUG
+
+################################
+# Resource Bundles
+################################
+spring.messages.basename= \
+    messages/messages, \
+    graphql/validation/ValidationMessages
