feat(seed): initial implementation for seeding
Add seed implementatioin with initial tests

--- a/compose.yaml
+++ b/compose.yaml
@@ -39,6 +39,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+    profiles:
+      - oidc-auth
 
 volumes:
   objectStoreData:
