--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,22 +7,27 @@ objectstore.options.bucket-name=simple-commerce
 objectstore.options.media-bucket-prefix=media
 objectstore.options.presigned-url-expiry-duration=2h
 objectstore.options.default-bucket=true
+simple-commerce.seeder.directory-prefix=classpath:seed-data/
+server.shutdown=graceful
+spring.lifecycle.timeout-per-shutdown-phase=20s
 spring.aop.proxy-target-class=false
 spring.application.name=simple-commerce
 spring.flyway.clean-disabled=true
 spring.flyway.clean-on-validation-error=false
 spring.flyway.locations=classpath:db/migration/{vendor}, classpath:db/data/{vendor}
 spring.graphql.graphiql.enabled=true
+spring.graphql.schema.introspection.enabled=true
 spring.jpa.open-in-view=false
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.highlight_sql=true
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://127.0.0.1:5556/dex
-spring.security.oauth2.resourceserver.jwt.principal-claim-name=name
+spring.security.user.name=simple_commerce
+spring.security.user.password=simple_commerce
+spring.security.user.roles=USER
 spring.threads.virtual.enabled=true
-spring.modulith.events.jdbc.schema-initialization.enabled=true
+spring.modulith.events.jdbc.schema-initialization.enabled=false
 
 ################################
 # Logging
@@ -32,6 +37,7 @@ logging.level.com.simplecommerce.shared.config.MinioConfiguration=DEBUG
 logging.level.com.simplecommerce.shared.config.Sorting=DEBUG
 logging.level.com.simplecommerce.product.ProductController=DEBUG
 logging.level.org.springframework.data.auditing.AuditingHandler=DEBUG
+logging.level.org.springframework.security=INFO
 
 ################################
 # Resource Bundles
@@ -39,3 +45,9 @@ logging.level.org.springframework.data.auditing.AuditingHandler=DEBUG
 spring.messages.basename= \
     messages/messages, \
     graphql/validation/ValidationMessages
+
+#---
+spring.config.activate.on-profile=oidc-auth
+spring.docker.compose.profiles.active=${spring.config.activate.on-profile}
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://127.0.0.1:5556/dex
+spring.security.oauth2.resourceserver.jwt.principal-claim-name=name
