feat(seed): stage media upload
Add seed implementatioin for staged uploads and signed url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ objectstore.options.media-bucket-prefix=media
 objectstore.options.presigned-url-expiry-duration=2h
 objectstore.options.default-bucket=true
 simple-commerce.seeder.directory-prefix=classpath:seed-data/
+simple-commerce.seeder.enabled=false
 server.shutdown=graceful
 spring.lifecycle.timeout-per-shutdown-phase=20s
 spring.aop.proxy-target-class=false
