test: add test cases for NodeController

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -9,3 +9,5 @@ spring:
 logging:
   level:
     org.hibernate.SQL: info
+    org.hibernate.HQL_FUNCTIONS: debug
+    com.simplecommerce.product.CategoryController: debug
