fix: breaking queries related to 'type Category {}'

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,11 +34,12 @@ spring.modulith.events.jdbc.schema-initialization.enabled=false
 # Logging
 ################################
 logging.level.org.springframework.beans.factory.wiring.BeanConfigurerSupport=DEBUG
-logging.level.com.simplecommerce.shared.config.MinioConfiguration=DEBUG
-logging.level.com.simplecommerce.shared.config.Sorting=DEBUG
-logging.level.com.simplecommerce.product.ProductController=DEBUG
 logging.level.org.springframework.data.auditing.AuditingHandler=DEBUG
 logging.level.org.springframework.security=INFO
+logging.level.com.simplecommerce.shared.config.MinioConfiguration=DEBUG
+logging.level.com.simplecommerce.shared.config.Sorting=DEBUG
+logging.level.com.simplecommerce.product.CategoryController=DEBUG
+logging.level.com.simplecommerce.product.ProductController=DEBUG
 
 ################################
 # Resource Bundles
