cleanup fsm configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.config.import=optional:${user.dir}/.env[.properties]
 hibernate.validator.constraint_expression_language_feature_level=bean-methods
 minio.endpoint=http://localhost:9000
 minio.access-key=simple_commerce
@@ -21,25 +22,11 @@ spring.graphql.schema.introspection.enabled=true
 spring.jpa.open-in-view=false
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.highlight_sql=true
 spring.security.user.name=simple_commerce
 spring.security.user.password=simple_commerce
 spring.security.user.roles=USER
 spring.threads.virtual.enabled=true
 spring.modulith.events.jdbc.schema-initialization.enabled=false
-
-################################
-# Logging
-################################
-logging.level.org.springframework.beans.factory.wiring.BeanConfigurerSupport=DEBUG
-logging.level.org.springframework.data.auditing.AuditingHandler=DEBUG
-logging.level.org.springframework.security=INFO
-logging.level.com.simplecommerce.shared.config.MinioConfiguration=DEBUG
-logging.level.com.simplecommerce.shared.config.Sorting=DEBUG
-logging.level.com.simplecommerce.product.CategoryController=DEBUG
-logging.level.com.simplecommerce.product.ProductController=DEBUG
 
 ################################
 # Resource Bundles
