feat: docker config for 'ory keto'

--- a/compose.yaml
+++ b/compose.yaml
@@ -40,7 +40,33 @@ services:
       postgres:
         condition: service_healthy
     profiles:
-      - oidc-auth
+      - oidc-authn
+  keto:
+    image: oryd/keto:v0.12.0-distroless
+    command: ["serve", "--config", "/home/ory/keto.yaml"]
+    volumes:
+      - ./keto/keto.yaml:/home/ory/keto.yaml
+      - ./keto/namespaces.keto.ts:/home/ory/namespaces/namespaces.keto.ts
+    ports:
+      - "4466:4466"
+      - "4467:4467"
+      - "4469:4469"
+    depends_on:
+      keto-migrate:
+        condition: service_completed_successfully
+    profiles:
+      - keto-authz
+  keto-migrate:
+    image: oryd/keto:v0.12.0-distroless
+    command: ["migrate", "up", "--format", "table", "--yes", "--config", "/home/ory/keto.yaml"]
+    volumes:
+      - ./keto/keto.yaml:/home/ory/keto.yaml
+      - ./keto/namespaces.keto.ts:/home/ory/namespaces/namespaces.keto.ts
+    depends_on:
+      postgres:
+        condition: service_healthy
+    profiles:
+      - keto-authz
 
 volumes:
   objectStoreData:
