--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,7 +36,11 @@ spring.messages.basename= \
     graphql/validation/ValidationMessages
 
 #---
-spring.config.activate.on-profile=oidc-auth
-spring.docker.compose.profiles.active=${spring.config.activate.on-profile}
+spring.config.activate.on-profile=oidc-authn
+spring.docker.compose.profiles.active=${spring.profiles.active}
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://127.0.0.1:5556/dex
 spring.security.oauth2.resourceserver.jwt.principal-claim-name=name
+
+#---
+spring.config.activate.on-profile=keto-authz
+spring.docker.compose.profiles.active=${spring.profiles.active}
