--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -19,6 +19,7 @@ spring.flyway.clean-on-validation-error=false
 spring.flyway.locations=classpath:db/migration/{vendor}, classpath:db/data/{vendor}
 spring.graphql.graphiql.enabled=true
 spring.graphql.schema.introspection.enabled=true
+spring.graphql.schema.printer.enabled=true
 spring.jpa.open-in-view=false
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=validate
