feat: implement OIDC authentication for dashboard
- Add OIDC authentication using Arctic and Dex as the provider\n- Configure user session management\n- Add login, callback, and logout routes\n- Protect dashboard routes with authentication\n- Display current user information in sidebar instead of hardcoded 'John Doe'\n- Update Dex configuration to accept new redirect URI

--- a/dex/config.yaml
+++ b/dex/config.yaml
@@ -24,6 +24,11 @@ staticClients:
       - "https://oauth.pstmn.io/v1/callback"
     name: "Simple Commerce"
     secret: "Zm9vYmFy"
+  - id: simple-commerce-admin
+    redirectURIs:
+      - "http://localhost:5173/auth/callback"
+    name: "Simple Commerce Dashboard"
+    public: true
 
 enablePasswordDB: true
 staticPasswords:
