feat(dashboard): implement JWT token storage and Houdini GraphQL integration
- Store JWT access token in session data structure

- Pass JWT token to Houdini for GraphQL requests

- Configure Houdini client to use proper authorization headers

- Add GraphQL endpoint and configuration files

--- a/dashboard/.env.example
+++ b/dashboard/.env.example
@@ -2,4 +2,5 @@
 OIDC_ISSUER="http://127.0.0.1:5556/dex"
 OIDC_CLIENT_ID="simple-commerce"
 OIDC_CLIENT_SECRET=""
-
+PUBLIC_GRAPHQL_ENDPOINT="http://127.0.0.1:8080/graphql"
+GRAPHQL_ACCESS_TOKEN=""
