--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -29,13 +29,14 @@
 		"@storybook/addon-vitest": "^9.0.18",
 		"@storybook/sveltekit": "^9.0.18",
 		"@sveltejs/adapter-auto": "^6.0.0",
-		"@sveltejs/kit": "^2.22.0",
-		"@sveltejs/vite-plugin-svelte": "^6.0.0",
+		"@sveltejs/kit": "<=2.21.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/node": "^22",
 		"@vitest/browser": "^3.2.3",
+		"arctic": "^3.7.0",
 		"autoprefixer": "^10.4.21",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
@@ -52,12 +53,12 @@
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
-		"vite": "^7.0.4",
+		"vite": "^6.0.3",
 		"vite-plugin-devtools-json": "^0.2.0",
 		"vitest": "^3.2.3",
-		"vitest-browser-svelte": "^0.1.0"
+		"vitest-browser-svelte": "^0.1.0",
+		"houdini": "^1.5.9",
+		"houdini-svelte": "^2.1.19"
 	},
-	"dependencies": {
-		"arctic": "^3.7.0"
-	}
+	"dependencies": {}
 }
