fix: configure CORS for GraphQL endpoint

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,5 +1,16 @@
+spring.application.name=simple-commerce
+spring.aop.proxy-target-class=false
 spring.config.import=optional:${user.dir}/.env[.properties]
+spring.lifecycle.timeout-per-shutdown-phase=20s
+spring.mvc.dispatch-options-request=true
+server.shutdown=graceful
+spring.threads.virtual.enabled=true
 hibernate.validator.constraint_expression_language_feature_level=bean-methods
+
+
+#-----------------------------------------------------------
+# Cloud Storage
+#-----------------------------------------------------------
 minio.endpoint=http://localhost:9000
 minio.access-key=simple_commerce
 minio.secret-key=simple_commerce
@@ -8,33 +19,50 @@ objectstore.options.bucket-name=simple-commerce
 objectstore.options.media-bucket-prefix=media
 objectstore.options.presigned-url-expiry-duration=2h
 objectstore.options.default-bucket=true
+
+
 simple-commerce.seeder.directory-prefix=classpath:seed-data/
 simple-commerce.seeder.enabled=false
-server.shutdown=graceful
-spring.lifecycle.timeout-per-shutdown-phase=20s
-spring.aop.proxy-target-class=false
-spring.application.name=simple-commerce
+
+
 spring.flyway.clean-disabled=true
 spring.flyway.clean-on-validation-error=false
 spring.flyway.locations=classpath:db/migration/{vendor}, classpath:db/data/{vendor}
+
+
+#-----------------------------------------------------------
+# Spring for GraphQL
+#-----------------------------------------------------------
 spring.graphql.graphiql.enabled=true
+spring.graphql.http.path=/graphql
 spring.graphql.schema.introspection.enabled=true
 spring.graphql.schema.printer.enabled=true
+spring.graphql.cors.allow-credentials=true
+spring.graphql.cors.allowed-headers=*
+spring.graphql.cors.exposed-headers=*
+spring.graphql.cors.allowed-methods=GET, POST, PUT, DELETE, OPTIONS
+spring.graphql.cors.allowed-origin-patterns[0]=http://localhost:5173
+spring.graphql.cors.allowed-origin-patterns[1]=http://127.0.0.1:5173
+spring.graphql.cors.allowed-origin-patterns[2]=https://*.juliuskrah.com
+
+
 spring.jpa.open-in-view=false
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=validate
+
+
 spring.security.user.name=simple_commerce
 spring.security.user.password=simple_commerce
 spring.security.user.roles=USER
-spring.threads.virtual.enabled=true
 spring.modulith.events.jdbc.schema-initialization.enabled=false
+
 # Override the compose file location by creating a file `.env` in the root of the project with the value:
 # spring.docker.compose.file=compose.yaml
 spring.docker.compose.file=../compose.yaml
 
-################################
+#-----------------------------------------------------------
 # Resource Bundles
-################################
+#-----------------------------------------------------------
 spring.messages.basename= \
     messages/messages, \
     graphql/validation/ValidationMessages
