--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -25,6 +25,8 @@ simple-commerce.seeder.directory-prefix=classpath:seed-data/
 simple-commerce.seeder.enabled=false
 
 
+# Flyway is disabled by default - enabled only for migrate command
+spring.flyway.enabled=false
 spring.flyway.clean-disabled=true
 spring.flyway.clean-on-validation-error=false
 spring.flyway.locations=classpath:db/migration/{vendor}, classpath:db/data/{vendor}
@@ -76,3 +78,22 @@ spring.security.oauth2.resourceserver.jwt.principal-claim-name=name
 #---
 spring.config.activate.on-profile=keto-authz
 spring.docker.compose.profiles.active=${spring.profiles.active}
+
+#---
+spring.config.activate.on-profile=serve
+# Default serving configuration - web application enabled
+spring.main.web-application-type=servlet
+
+#---
+spring.config.activate.on-profile=migrate
+# Migration-only configuration - no web server
+spring.main.web-application-type=none
+spring.flyway.enabled=true
+# Minimal connection pool for migration
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=1
+
+#---
+spring.config.activate.on-profile=seed
+# Seeding configuration
+simple-commerce.seeder.enabled=true
