--- a/app/src/test/resources/application-test.yaml
+++ b/app/src/test/resources/application-test.yaml
@@ -1,4 +1,6 @@
 spring:
+  flyway:
+    enabled: true
   sql:
     init:
       mode: never
@@ -6,6 +8,8 @@ spring:
     defer-datasource-initialization: false
     properties:
       jakarta.persistence.sql-load-script-source: /import.sql
+    hibernate:
+      ddl-auto: validate
 logging:
   level:
     org.hibernate.SQL: info
