--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -27,8 +27,7 @@ simple-commerce.seeder.enabled=false
 
 # Flyway is disabled by default - enabled only for migrate command
 spring.flyway.enabled=false
-spring.flyway.clean-disabled=true
-spring.flyway.clean-on-validation-error=false
+spring.flyway.clean-disabled=false
 spring.flyway.locations=classpath:db/migration/{vendor}, classpath:db/data/{vendor}
 
 
@@ -50,7 +49,6 @@ spring.graphql.cors.allowed-origin-patterns[2]=https://*.juliuskrah.com
 
 spring.jpa.open-in-view=false
 spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=validate
 
 
 spring.security.user.name=simple_commerce
@@ -83,6 +81,9 @@ spring.docker.compose.profiles.active=${spring.profiles.active}
 spring.config.activate.on-profile=serve
 # Default serving configuration - web application enabled
 spring.main.web-application-type=servlet
+spring.datasource.hikari.maximum-pool-size=15
+spring.datasource.hikari.connection-timeout=1000
+spring.datasource.hikari.minimum-idle=1
 
 #---
 spring.config.activate.on-profile=migrate
