feat: implement file management and modernize gRPC authorization
- **Build System Modernization:**
  - Add Spring gRPC support and protobuf plugin configuration
  - Upgrade Spring Boot to 3.5.5 and Gradle to 9.0.0
  - Replace manual gRPC dependencies with Spring gRPC starter
  - Consolidate ANTLR configuration and remove redundant dependencies

- **File Management Implementation:**
  - Add comprehensive file management system with media and digital content support
  - Implement MediaFile and DigitalContent record types with File interface
  - Create repository layers for media and digital content entities
  - Add GraphQL controllers for file operations and staged uploads
  - Implement MinIO integration for object storage

- **Authorization System Refactoring:**
  - Replace manual gRPC channel configuration with Spring gRPC client auto-configuration
  - Implement Ory Keto integration with proper protobuf definitions
  - Add comprehensive namespace definitions for ReBAC authorization model
  - Create authorization service with syntax validation and permission checking
  - Add structured permission models for Actor, Product, and Category namespaces

- **Infrastructure Updates:**
  - Add protobuf definitions for Keto gRPC services
  - Update Docker Compose configuration for Keto authorization
  - Add ANTLR grammar for search query parsing
  - Implement test infrastructure for authorization and file management

- **Configuration Enhancements:**
  - Streamline application properties for gRPC client configuration
  - Add profile-specific configurations for authorization
  - Update DexIDP user roles and authentication setup

BREAKING CHANGES:
- Manual gRPC channel beans replaced with Spring gRPC auto-configuration
- File interface changed from package-private to public
- Authorization service API significantly refactored

--- a/app/src/test/resources/application-test.yaml
+++ b/app/src/test/resources/application-test.yaml
@@ -12,6 +12,11 @@ spring:
       ddl-auto: validate
   modulith:
     detection-strategy: explicitly-annotated
+
+  grpc:
+    client:
+      inprocess:
+        enabled: false
 logging:
   level:
     org.hibernate.SQL: info
