--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -79,6 +79,9 @@ spring.security.oauth2.resourceserver.jwt.principal-claim-name=name
 #---
 spring.config.activate.on-profile=keto-authz
 spring.docker.compose.profiles.active=${spring.profiles.active}
+spring.grpc.client.channels.keto-read.address=localhost:4466
+spring.grpc.client.channels.keto-write.address=localhost:4467
+spring.grpc.client.channels.keto-opl.address=localhost:4469
 
 #---
 spring.config.activate.on-profile=serve
