--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,4 @@
-springBootVersion=3.5.5
+springBootPluginVersion=3.5.6
+dependencyManagementPluginVersion=1.1.7
+protobufPluginVersion=0.9.5
+javaVersion = 25
