fix(ci): update JDK to 25 and resolve authorization service issues
- Update GitHub Actions workflow to use JDK 25 instead of 21
- Update Dockerfile to use Java 25 base images
- Fix KetoAuthorizationService checkPermission method to return completed future instead of throwing exception
- Improve PermissionCheckAspect with better security context handling and method resolution
- Update VirtualThreadHelper to use StructuredTaskScope consistently for both runInScope and callInScope methods
- Add JsonIgnore annotation to ProductEntity category field to prevent serialization issues
- Update compose.yaml to include build configuration for simple-commerce services

--- a/compose.yaml
+++ b/compose.yaml
@@ -2,8 +2,10 @@ name: "simple-commerce"
 
 services:
   simple-commerce-migrate:
-    image: ${SIMPLE_COMMERCE_IMAGE:-juliuskrah/simple-commerce:latest}
-    command: ["migrate", "--seed"]
+    image: juliuskrah/simple-commerce:latest
+    build:
+      dockerfile: ./Dockerfile
+    command: ["migrate"]
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/simple_commerce
       SPRING_DATASOURCE_USERNAME: simple_commerce
@@ -17,7 +19,9 @@ services:
     profiles:
       - app
   simple-commerce:
-    image: ${SIMPLE_COMMERCE_IMAGE:-juliuskrah/simple-commerce:latest}
+    image: juliuskrah/simple-commerce:latest
+    build:
+      dockerfile: ./Dockerfile
     command: ["serve"]
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/simple_commerce
