--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ springBootPluginVersion=3.5.6
 dependencyManagementPluginVersion=1.1.7
 protobufPluginVersion=0.9.5
 javaVersion = 25
+
+org.gradle.configuration-cache=true
