feat: add integration test module
- Add a new `integration-test` module for end-to-end testing.
- Configure the module with Playwright for browser automation and Testcontainers for managing Docker environments.
- Add a sample integration test for creating a product, including OAuth2 authentication flow.
- Update Docker and Gradle configurations to support the new module.
- Add `graphql.config.yml` for GraphQL tooling.
- Update `.gitignore` to include new files and directories.

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -79,9 +79,9 @@ spring.security.oauth2.resourceserver.jwt.principal-claim-name=name
 #---
 spring.config.activate.on-profile=keto-authz
 spring.docker.compose.profiles.active=${spring.profiles.active}
-spring.grpc.client.channels.keto-read.address=localhost:4466
-spring.grpc.client.channels.keto-write.address=localhost:4467
-spring.grpc.client.channels.keto-opl.address=localhost:4469
+spring.grpc.client.channels.keto-read.address=${keto-read:localhost:4466}
+spring.grpc.client.channels.keto-write.address=${keto-write:localhost:4467}
+spring.grpc.client.channels.keto-opl.address=${keto-opl:localhost:4469}
 
 #---
 spring.config.activate.on-profile=serve
