--- a/integration-test/.gitignore
+++ b/integration-test/.gitignore
@@ -1,7 +1,5 @@
 HELP.md
 .gradle
-extracted
-.env
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
@@ -36,16 +34,7 @@ out/
 /.nb-gradle/
 
 ### VS Code ###
-!.vscode/mcp.json
 .vscode/
-*.jar
 
-### NPM ###
-node_modules/
-package-lock.json
-
-### Others ###
-.DS_Store
-java_*.hprof
-
-playwright/.auth
+### Kotlin ###
+.kotlin
