--- a/.github/workflows/java-unit-test.yml
+++ b/.github/workflows/java-unit-test.yml
@@ -1,10 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
 name: Java CI with Gradle
 
 on:
@@ -14,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  "unit-test":
 
     runs-on: ubuntu-latest
     permissions:
@@ -33,5 +26,5 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
 
-    - name: Build with Gradle Wrapper
-      run: ./gradlew build
+    - name: Unit test with Gradle Wrapper
+      run: ./gradlew :app:test
