feat: implement actor permission management
- Add assignPermissionsToActor and revokePermissionsFromActor mutations
- Implement permission tuple handling with Keto authorization service
- Add @Check and @Permit authorization annotations
- Update actor module to support authorization dependency
- Add comprehensive tests for permission management
- Configure AspectJ for method-level security
- Update GraphQL schema with permission operations documentation

--- a/app/src/main/resources/application-dev.yaml
+++ b/app/src/main/resources/application-dev.yaml
@@ -2,6 +2,7 @@ management:
   endpoint:
     env:
       access: unrestricted
+      show-values: always
     auditevents:
       access: unrestricted
   endpoints:
