--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=simple-commerce
 spring.aop.proxy-target-class=false
+spring.aop.auto=false
 spring.config.import=optional:${user.dir}/.env[.properties]
 spring.lifecycle.timeout-per-shutdown-phase=20s
 spring.mvc.dispatch-options-request=true
