refactor: replace method security with aspects

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 springBootPluginVersion=3.5.6
 dependencyManagementPluginVersion=1.1.7
 protobufPluginVersion=0.9.5
+aspectjPluginVersion=9.0.0
 javaVersion = 25
 
 org.gradle.configuration-cache=true
