--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   docker:
+    if: false # Disabled until needed aspectj supports Java 25
     runs-on: ubuntu-latest
     permissions:
       packages: write
