feat(auth): add Dex gRPC integration and user event handling
- Integrate Dex gRPC for authentication
- Add user event publishing and handling
- Refactor user management and controller
- Update tests and GraphQL schema
- Fix environment and compose setup for Dex

BREAKING CHANGE: User authentication now uses Dex gRPC and user events are published on creation.

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -76,6 +76,7 @@ spring.config.activate.on-profile=oidc-authn
 spring.docker.compose.profiles.active=${spring.profiles.active}
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://127.0.0.1:5556/dex
 spring.security.oauth2.resourceserver.jwt.principal-claim-name=name
+spring.grpc.client.channels.dex-grpc.address=${dex-grpc:localhost:5557}
 
 #---
 spring.config.activate.on-profile=keto-authz
