Refactor product state management and enhance authorization
- Removed unused imports and refactored code in UserManagement and TransactionConfiguration.
- Introduced ProductStateMachineConfiguration for managing product lifecycle states (DRAFT, PUBLISHED, ARCHIVED) with corresponding actions and guards.
- Updated TransactionConfiguration to utilize SecurityUtils for fetching current user login.
- Replaced direct references to Node and Product with shared types in various classes.
- Enhanced ProductController to include ActorService for managing product creators and updaters.
- Updated GraphQL schema to support new UpdateProductInput for product updates.
- Modified product-related tests to accommodate changes in Product structure and authorization logic.
- Improved Docker Compose configuration for better service management and added environment variables for Keto authorization.
- Updated integration tests to reflect changes in authentication and product management logic.

--- a/compose.yaml
+++ b/compose.yaml
@@ -5,12 +5,16 @@ services:
     image: juliuskrah/simple-commerce:latest
     build:
       dockerfile: ./Dockerfile
-    command: ["migrate"]
+    command: ["migrate --seed"]
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/simple_commerce
       SPRING_DATASOURCE_USERNAME: simple_commerce
       SPRING_DATASOURCE_PASSWORD: simple_commerce
       MINIO_ENDPOINT: http://object-store:9000
+      SPRING_PROFILES_ACTIVE: keto-authz
+      KETO_READ: keto:4466
+      KETO_WRITE: keto:4467
+      KETO_OPL: keto:4469
     depends_on:
       postgres:
         condition: service_healthy
